--- a/pom.xml
+++ b/pom.xml
@@ -60,23 +60,14 @@
                 <version>3.3.2</version>
             </plugin>
             <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>5.0.1.Final</version>
                 <configuration>
-                    <url>http://localhost:8080/manager/text</url>
-                    <server>TomcatServer</server>
-                    <path>/minhaapp</path>
+                    <version>${wildfly.version}</version>
+                    <server-config>standalone.xml</server-config>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    
-    <repositories>
-        <repository>
-            <id>typesafe-releases</id>
-            <url>https://repo.typesafe.com/typesafe/releases/</url>
-        </repository>
-    </repositories>
-
 </project>
