--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,10 @@
             <artifactId>gson</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.joinfaces</groupId>
             <artifactId>omnifaces-spring-boot-starter</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.joinfaces</groupId>
             <artifactId>rewrite-spring-boot-starter</artifactId>
