--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
             <artifactId>gson</artifactId>
             <scope>runtime</scope>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>org.joinfaces</groupId>
             <artifactId>omnifaces-spring-boot-starter</artifactId>
         </dependency>-->
@@ -126,7 +126,11 @@
             <groupId>jakarta.json.bind</groupId>
             <artifactId>jakarta.json.bind-api</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.faces</artifactId>
+            <version>4.0.11</version>
+        </dependency>
     </dependencies>
 
     <build>
