--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,10 @@
             <artifactId>jakarta.faces</artifactId>
             <version>4.0.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
