--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,15 @@
     <welcome-file-list>
         <welcome-file>/santo_terco.xhtml</welcome-file> 
     </welcome-file-list>
+
+   <servlet>
+       servlet-name>HealthCheckServlet</servlet-name>
+       <servlet-class>com.mycompany.health.HealthCheckServlet</servlet-class>
+   </servlet>
+
+   <servlet-mapping>
+       <servlet-name>HealthCheckServlet</servlet-name>
+       <url-pattern>/health</url-pattern>
+   </servlet-mapping>
+
 </web-app>
