--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.datasource.hikari.data-source-properties.sslmode=require
 
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=never
+
+server.port=8080
+server.address=0.0.0.0
+
+# Evita que o Spring reinicie v\u00e1rias vezes e falhe o health check
+spring.main.lazy-initialization=true
+spring.main.web-application-type=servlet
