--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     </session-config>
     
     <welcome-file-list>
-        <welcome-file>/santo_terco.xhtml</welcome-file> 
+        <welcome-file>santo_terco.xhtml</welcome-file> 
     </welcome-file-list>
 
     <servlet>
